<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_add"
          android:title="@string/menu_add"
          android:icon="@drawable/ic_add"
          android:showAsAction="always">
        <menu>
            <item android:id="@+id/menu_add_call"
                  android:title="@string/menu_add_call"/>
            <item android:id="@+id/menu_add_sms"
                  android:title="@string/menu_add_sms"/>
            <item android:id="@+id/menu_add_tw_mn"
                  android:title="@string/menu_add_tw_mn"/>
            <item android:id="@+id/menu_add_tw_dm"
                  android:title="@string/menu_add_tw_dm"/>
            <item android:id="@+id/menu_add_gmail"
                  android:title="@string/menu_add_gmail"/>
        </menu>
    </item>
    <item android:id="@+id/menu_settings"
          android:title="@string/menu_settings"
          android:showAsAction="never"/>
</menu>